# fastapi-sqlalchemy-template

./: .env.example  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml  settings.py
.github/workflows/: ci.yml
src/: app.py  container.py  settings.py
src/common/protocols/: __init__.py  event.py  model_mapper.py  persistence_adapter.py  usecase.py
src/core/: pydantic.py  snowflake.py
src/core/fastapi/: error.py
src/core/fastapi/event/: handler.py
src/modules/author/domain/: value_objects.py
src/modules/author/domain/aggregate/: id.py  model.py
src/modules/author/infrastructure/persistence/: adapter.py  mapper.py  uow.py
src/modules/author/infrastructure/query/: dto.py  mapper.py  uow.py
src/modules/author/usecase/: __init__.py
src/modules/author/usecase/FindAuthorByFirstname/: api.py  impl.py
src/modules/author/usecase/addBookToAuthor/: command.py  event_handler.py  impl.py
src/modules/author/usecase/findAuthorByTitle/: api.py  command.py  impl.py
src/modules/author/usecase/newAuthor/: api.py  command.py  impl.py
src/modules/book/domain/: value_objects.py
src/modules/book/domain/aggregate/: id.py  model.py
src/modules/book/infrastructure/persistence/: adapter.py  mapper.py  uow.py
src/modules/book/infrastructure/query/: dto.py  mapper.py  uow.py
src/modules/book/usecase/: __init__.py
src/modules/book/usecase/newBook/: api.py  (+2 more)
src/persistence/author/: entity.py  repository.py
src/persistence/book/: entity.py  repository.py
tests/: conftest.py  test_find_author_by_first_name.py
tests/api/: test_find_author_by_first_name.py
tests/test_fixture/: test_create_test_database.py  test_db_session.py  test_moc_data.py
(+12 files in other folders)
