[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 99
preview = true
target-version = ["py312"]

[tool.flake8]
exclude = [
  "./.mypy_cache/*,",
  "./.venv/*",
  ".DS_Store",
  ".git",
  ".tox",
  "__pycache__"
]
ignore = ["E203", "E501", "E704", "W503"]
max-line-length = 99
plugins = ["flake8-pyproject"]

[tool.isort]
profile = "black"

[tool.mypy]
check_untyped_defs = false
disable_error_code = ["arg-type", "assignment", "attr-defined", "misc", "override", "return-value", "valid-type", "var-annotated"]
follow_imports_for_stubs = true
ignore_missing_imports = true
local_partial_types = true
namespace_packages = true
pretty = true
show_error_context = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.poetry]
authors = ["nikitazulikov <zhulikovnikita884@gmail.com>"]
description = ""
name = "fastapi-sqlalchemy-template"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
asyncpgsa = "^0.27.1"
black = "^24.3.0"
dependency-injector = {extras = ["yaml"], version = "^4.38.0"}
fastapi = "^0.74.0"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
isort = "^5.13.2"
loguru = "^0.6.0"
mypy = "^1.9.0"
orjson = "^3.6.7"
pylint = "^3.1.0"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
python = "^3.9"
python-mf-data = {extras = ["rdb"], version = "^0.2.5"}
toml-sort = "^0.23.1"
uvicorn = {extras = ["standard"], version = "^0.17.5"}
pytest-asyncio = "^0.23.6"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:asynctest.*",
]
